crates/carta/tests/snapshots/odt__corpus__links__internal-anchor.snap
---
source: crates/carta/tests/odt.rs
expression: output
---
<?xml version="1.0" encoding="UTF-8"?>
<office:document-content xmlns:office="urn:oasis:names:tc:opendocument:xmlns:office:1.0" xmlns:style="urn:oasis:names:tc:opendocument:xmlns:style:1.0" xmlns:text="urn:oasis:names:tc:opendocument:xmlns:text:1.0" xmlns:table="urn:oasis:names:tc:opendocument:xmlns:table:1.0" xmlns:draw="urn:oasis:names:tc:opendocument:xmlns:drawing:1.0" xmlns:fo="urn:oasis:names:tc:opendocument:xmlns:xsl-fo-compatible:1.0" xmlns:xlink="http://www.w3.org/1999/xlink" xmlns:dc="http://purl.org/dc/elements/1.1/" xmlns:meta="urn:oasis:names:tc:opendocument:xmlns:meta:1.0" xmlns:number="urn:oasis:names:tc:opendocument:xmlns:datastyle:1.0" xmlns:svg="urn:oasis:names:tc:opendocument:xmlns:svg-compatible:1.0" xmlns:math="http://www.w3.org/1998/Math/MathML" office:version="1.3">
<office:scripts />
<office:font-face-decls>
<style:font-face style:name="Courier New" style:font-family-generic="modern" style:font-pitch="fixed" svg:font-family="'Courier New'" />
</office:font-face-decls>
<office:automatic-styles>
</office:automatic-styles>
<office:body>
<office:text>
<text:h text:style-name="Heading_20_1" text:outline-level="1">
<text:bookmark-start text:name="section-one" />Section One<text:bookmark-end text:name="section-one" />
</text:h>
<text:p text:style-name="First_20_paragraph">Back to <text:a xlink:type="simple" xlink:href="#section-one" office:name="">
<text:span text:style-name="Definition">the section</text:span>
</text:a>, or an <text:a xlink:type="simple" xlink:href="https://example.org/docs" office:name="">
<text:span text:style-name="Definition">outside page</text:span>
</text:a>.</text:p>
</office:text>
</office:body>
</office:document-content>
